--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -193,21 +193,8 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
-    <integer name="config_deviceHardwareKeys">83</integer>
-
-    <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
-         This integer should equal the sum of the corresponding value for each
-         of the following keys present:
-             1 - Home
-             2 - Back
-             4 - Menu
-             8 - Assistant (search)
-            16 - App switch
-            32 - Camera
-            64 - Volume rocker
-         For example, a device with Home, Back and Menu keys would set this
-         config to 7. -->
-<!--    <integer name="config_deviceHardwareWakeKeys">65</integer> -->
+<!--    <integer name="config_deviceHardwareKeys">83</integer> -->
+    <integer name="config_deviceHardwareKeys">7</integer>
 
     <!-- Control the behavior when the user long presses the home button.
             0 - Nothing
@@ -232,6 +219,13 @@
          services/core/java/com/android/server/policy/policy/impl/PhoneWindowManager.java
     -->
 <!--    <integer name="config_longPressOnAppSwitchBehavior">1</integer> -->
+
+    <!-- The list absolute paths of jar/apk files containing the device specific handlers,
+        delimited by File.pathSeparator, which defaults to ":" on Android -->
+    <string name="config_deviceKeyHandlerLib" translatable="false">/system/priv-app/GTS2Parts/GTS2Parts.apk</string>
+    <!-- Full qualified name of the class that implements
+        com.android.internal.os.DeviceKeyHandler interface. -->
+    <string name="config_deviceKeyHandlerClass" translatable="false">org.omnirom.device.KeyHandler</string>
 
     <!-- Maximum number of supported users -->
     <integer name="config_multiuserMaximumUsers">8</integer>
