msm8976-common: Add mDNIe Negative to device settings
Change-Id: Ib340fea508cb62e1393040cc20c7a95cf4bd1812

--- a/GTS2Parts/res/xml/main.xml
+++ b/GTS2Parts/res/xml/main.xml
@@ -22,6 +22,12 @@
             android:title="@string/mdnie_title"
             android:entries="@array/mdnie_scenario_entries"
             android:entryValues="@array/mdnie_scenario_entries_values" />
+
+        <CheckBoxPreference
+            android:key="mdnie_negative"
+            android:summary="@string/mdnie_negative_summary"
+            android:title="@string/mdnie_negative_title"
+            android:persistent="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
