msm8976-common: Update style for GTS2Parts to support custom overlays
Change-Id: Iaab2b7dd9458f66ca14167f69e09db21b969bd69

--- a/GTS2Parts/res/values/styles.xml
+++ b/GTS2Parts/res/values/styles.xml
@@ -15,10 +15,10 @@
 -->
 
 <resources>
-    <!-- Theme for the activity com.android.phone.Settings, which is the
-         "Mobile network settings" screen (used on non-voice-capable
-         tablets as well as regular phone devices.) -->
-    <style name="Theme.Main" parent="@android:style/Theme.Holo">
-        <item name="android:actionBarStyle">@android:style/Widget.Holo.ActionBar.Solid</item>
+<!--    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Settings">
+        <item name="preferenceTheme">@style/PreferenceTheme</item>
     </style>
+
+    <style name="PreferenceTheme" parent="@style/PreferenceThemeOverlay.SettingsBase">
+    </style> -->
 </resources>
