--- a/overlay/packages/apps/SnapdragonCamera2/res/values/config.xml
+++ b/overlay/packages/apps/SnapdragonCamera2/res/values/config.xml
@@ -15,8 +15,10 @@
 -->
 
 <resources>
-    <bool name="pref_camera_zsl_disabled">true</bool>
-    <string name="pref_camera_zsl_default" translatable="false">off</string>
-<!--    <bool name="back_camera_open_legacy">false</bool>
-    <bool name="front_camera_open_legacy">false</bool> -->
+
+<!--    <string name="preview_fps_range">30000,30000</string>
+i-->
+    <!-- Enable support for camera api v2 -->
+    <bool name="support_camera_api_v2">false</bool>
+
 </resources>
